--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@vok/native-hooks",
-  "version": "0.0.1",
+  "name": "@vokhuyet/native-hooks",
+  "version": "0.0.2",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -23,8 +23,6 @@
     "@types/jest": "25.2.3",
     "@types/react": "16.9.34",
     "@types/react-native": "0.62.18",
-    "all-contributors-cli": "6.15.0",
-    "auto": "9.26.8",
     "eslint": "7.3.1",
     "eslint-plugin-prettier": "3.1.4",
     "jest": "26.0.1",
@@ -35,10 +33,13 @@
     "ts-jest": "25.5.1",
     "typescript": "3.9.7"
   },
-  "author": "VokhuyetOz",
+  "author": "vokhuyetOz",
   "repository": {
     "type": "git",
-    "url": "git://github.com/react-native-community/hooks.git"
+    "url": "https://github.com/vokhuyetOz/native-hooks.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "license": "MIT",
   "files": [
